--- a/layout.html
+++ b/layout.html
@@ -348,12 +348,12 @@
 					data-item_num="{item_num}">+</span>
 			</div>
 	{kitlist-blocks:}
-		<div class="row">{::prkit}</div>
+		<div style="display: grid; gap:20px; grid-template-columns: repeat(auto-fill,minmax(210px, 1fr))">{::prkit}</div>
 		{prkit:}
-			<div class="col-sm-4 space">
+			<div>
 				{images.0?:prkitimg}
 				<div >
-					<div class="d-flex flex-column" style="min-width:0;">
+					<div style="display: flex; flex-direction: column; min-width:0;">
 						<div title="{Наименование}" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">{Наименование}&nbsp;</div>
 						<div style="flex-grow:1; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
 							<a href="/{:cat.pospath}{:cat.mark.set}">
