--- a/layout.html
+++ b/layout.html
@@ -228,9 +228,9 @@
 {cat::}-catalog/cat.tpl
 {odin:}1
 {showkit:}
-	<div class="clearfix mb-2">
-		<div class="d-flex justify-content-between">
-			<div style="white-space:nowrap; display:block; overflow:hidden; text-overflow: ellipsis;">
+	<div style="margin-bottom: 0.5rem; clear:both">
+		<div style="display: flex; justify-content: space-between">
+			<div style="display:block; overflow:hidden; text-overflow: ellipsis;">
 				<a onclick="//Ascroll.go('#kitlist'); return false;" data-crumb2="false" href="/catalog/{producer_nick}/{article_nick}{item_num!:odin?item_num:cat.slval}">{Наименование}</a>
 			</div>
 			<div>
