--- a/layout.html
+++ b/layout.html
@@ -180,7 +180,7 @@
 	{show:}
 	<div>
 		<div class="brick">
-			<div class="name"><b>{pos.Наименование} {pos.article} {pos.more.Код}</b></div>
+			<div class="name"><b>{pos.Наименование} {pos.article} {pos.Код}</b></div>
 			<div class="kit">
 				<nobr class="a openinfo">
 					{~length(pos.kit)?:kitopen?:posopen}
