--- a/layout.html
+++ b/layout.html
@@ -212,6 +212,8 @@
 				<!--<span class="a closeinfo" style="color:red">Свернуть</span>-->
 			</div>
 		</div>
+		{pos.Цена?:kitcostshow}
+		{kitcostshow:}
 		<div style="display: flex; justify-content: space-between; align-items: flex-end;">
 			<div style="flex-grow: 1" class="{~sid}">
 				<style media="(max-width: 991px)">
